[gd_scene load_steps=18 format=3 uid="uid://dpnrfc8ct5j2k"]

[ext_resource type="Script" uid="uid://dhj5xa5aw5u7e" path="res://scenes/ui/menus/menu_with_confirm.gd" id="1_f748d"]
[ext_resource type="PackedScene" uid="uid://77buhb1awwg3" path="res://scenes/ui/menus/show_controls_screen.tscn" id="2_7sp34"]
[ext_resource type="PackedScene" uid="uid://cr76tloydxhqv" path="res://scenes/ui/menus/show_options_screen.tscn" id="3_h8eu8"]
[ext_resource type="Theme" uid="uid://ch4ic0feakt4r" path="res://assets/themes/default_theme.tres" id="4_465w4"]
[ext_resource type="PackedScene" uid="uid://b7jbkkvivmc7c" path="res://scenes/ui/odd_button.tscn" id="5_om76a"]
[ext_resource type="PackedScene" uid="uid://da10yhbdl8klh" path="res://assets/particles/continue_particles.tscn" id="6_n1yvc"]
[ext_resource type="Material" uid="uid://dxac3sbue2ygf" path="res://assets/particles/continue_particle_process_material.tres" id="7_0bwxu"]

[sub_resource type="Animation" id="Animation_fu5m3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions/RestoreMarginContainer:theme_override_constants/margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions/RestoreMarginContainer:theme_override_constants/margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/PanelContainer/MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ijkb4"]
resource_name = "auto"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"focus_first_available_choice"
}, {
"args": [],
"method": &"animation_player_play_restore"
}]
}

[sub_resource type="Animation" id="Animation_buwwf"]
resource_name = "out"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7k7h4"]
resource_name = "restore"
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions/RestoreMarginContainer:theme_override_constants/margin_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 36, 32]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions/RestoreMarginContainer:theme_override_constants/margin_bottom")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 36, 32]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_buwwf"]
_data = {
&"RESET": SubResource("Animation_fu5m3"),
&"auto": SubResource("Animation_ijkb4"),
&"out": SubResource("Animation_buwwf"),
&"restore": SubResource("Animation_7k7h4")
}

[sub_resource type="Theme" id="Theme_808v6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f748d"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_detail = 5

[sub_resource type="Animation" id="Animation_k4mhs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RestoreMarginContainer/RestoreButton:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.568627, 0.647059, 0.858824, 1)]
}

[sub_resource type="Animation" id="Animation_moutl"]
resource_name = "restorebuttonshimmer"
length = 5.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RestoreMarginContainer/RestoreButton:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.568627, 0.647059, 0.858824, 1), Color(0.5676, 0.86, 0.767407, 1), Color(0.7138, 0.86, 0.5676, 1), Color(0.86, 0.630953, 0.5676, 1), Color(0.86, 0.5676, 0.782027, 1), Color(0.568627, 0.647059, 0.858824, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k4mhs"]
_data = {
&"RESET": SubResource("Animation_k4mhs"),
&"restorebuttonshimmer": SubResource("Animation_moutl")
}

[node name="OddMenuWithConfirm" type="CanvasLayer"]
process_mode = 3
layer = 5
script = ExtResource("1_f748d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_buwwf")
}
autoplay = "auto"

[node name="MarginContainer" type="MarginContainer" parent="."]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme = SubResource("Theme_808v6")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
process_mode = 3
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f748d")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
process_mode = 3
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
process_mode = 3
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("4_465w4")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer"]
process_mode = 3
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Menu" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer"]
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 16

[node name="MenuLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 32
text = "MENU"
horizontal_alignment = 1

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 8

[node name="RestoreMarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions"]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="RestoreAnimationPlayer" type="AnimationPlayer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions/RestoreMarginContainer"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_k4mhs")
}
autoplay = "restorebuttonshimmer"

[node name="RestoreButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions/RestoreMarginContainer" instance=ExtResource("5_om76a")]
unique_name_in_owner = true
visible = false
self_modulate = Color(0.568627, 0.647059, 0.858824, 1)
layout_mode = 2
text = "REVIVE"

[node name="Node2D" type="Node2D" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions/RestoreMarginContainer/RestoreButton"]
position = Vector2(-25.78, 16.17)

[node name="ContinueParticles" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions/RestoreMarginContainer/RestoreButton/Node2D" instance=ExtResource("6_n1yvc")]
process_material = ExtResource("7_0bwxu")

[node name="ResumeButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions" instance=ExtResource("5_om76a")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RESUME"
is_back_button = true

[node name="ControlsButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions" instance=ExtResource("5_om76a")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "CONTROLS"
spawn_menu = true
menu_to_spawn = ExtResource("2_7sp34")

[node name="OptionsButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions" instance=ExtResource("5_om76a")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "OPTIONS"
spawn_menu = true
menu_to_spawn = ExtResource("3_h8eu8")

[node name="RestartButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions" instance=ExtResource("5_om76a")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RETRY"
require_selection_confirmation = true

[node name="LeaveButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/MenuOptions" instance=ExtResource("5_om76a")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "QUIT"
require_selection_confirmation = true
